--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -189,6 +189,23 @@
   number = {2}
 }
 
+@article{bachofenLightVPDGradients2020a,
+  title = {Light and {{VPD}} Gradients Drive Foliar Nitrogen Partitioning and Photosynthesis in the Canopy of {{European}} Beech and Silver Fir},
+  author = {Bachofen, Christoph and D’Odorico, Petra and Buchmann, Nina},
+  date = {2020-02-01},
+  journaltitle = {Oecologia},
+  volume = {192},
+  pages = {323--339},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-019-04583-x},
+  url = {https://doi.org/10.1007/s00442-019-04583-x},
+  urldate = {2021-03-09},
+  abstract = {While foliar photosynthetic relationships with light, nitrogen, and water availability have been well described, environmental factors driving vertical gradients of foliar traits within forest canopies are still not well understood. We, therefore, examined how light availability and vapour pressure deficit (VPD) co-determine vertical gradients (between 12 and 42~m and in the understorey) of foliar photosynthetic capacity (Amax), 13C fractionation (∆), specific leaf area (SLA), chlorophyll (Chl), and nitrogen (N) concentrations in canopies of Fagus sylvatica and Abies alba growing in a mixed forest in Switzerland in spring and summer 2017. Both species showed lower Chl/N and lower SLA with higher light availability and VPD at the top canopy. Despite these biochemical and morphological acclimations, Amax during summer remained relatively constant and the photosynthetic N-use efficiency (PNUE) decreased with higher light availability for both species, suggesting suboptimal N allocation within the canopy. ∆ of both species were lower at the canopy top compared to the bottom, indicating high water-use efficiency (WUE). VPD gradients strongly co-determined the vertical distribution of Chl, N, and PNUE in F. sylvatica, suggesting stomatal limitation of photosynthesis in the top canopy, whereas these traits were only related to light availability in A. alba. Lower PNUE in F. sylvatica with higher WUE clearly indicated a trade-off in water vs. N use, limiting foliar acclimation to high light and VPD at the top canopy. Species-specific trade-offs in foliar acclimation to environmental canopy gradients may thus be considered for scaling photosynthesis from leaf to canopy to landscape levels.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\XEUA5CVK\\Bachofen et al. - 2020 - Light and VPD gradients drive foliar nitrogen part.pdf},
+  langid = {english},
+  number = {2}
+}
+
 @article{baltzerLeafOpticalResponses2005,
   title = {Leaf Optical Responses to Light and Soil Nutrient Availability in Temperate Deciduous Trees},
   author = {Baltzer, J. L. and Thomas, S. C.},
@@ -401,6 +418,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\RNPNR93J\\Blanchard et al. - 2016 - Contrasted allometries between stem diameter, crow.pdf},
   langid = {english},
   number = {6}
+}
+
+@article{blonderLowPredictabilityEnergy2020,
+  title = {Low Predictability of Energy Balance Traits and Leaf Temperature Metrics in Desert, Montane and Alpine Plant Communities},
+  author = {Blonder, Benjamin and Escobar, Sabastian and Kapás, Rozália E. and Michaletz, Sean T.},
+  date = {2020},
+  journaltitle = {Functional Ecology},
+  volume = {34},
+  pages = {1882--1897},
+  issn = {1365-2435},
+  doi = {10.1111/1365-2435.13643},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/1365-2435.13643},
+  urldate = {2021-03-09},
+  abstract = {Leaf energy balance may influence plant performance and community composition. While biophysical theory can link leaf energy balance to many traits and environment variables, predicting leaf temperature and key driver traits with incomplete parameterizations remains challenging. Predicting thermal offsets (δ, Tleaf − Tair difference) or thermal coupling strengths (β, Tleaf vs. Tair slope) is challenging. We ask: (a) whether environmental gradients predict variation in energy balance traits (absorptance, leaf angle, stomatal distribution, maximum stomatal conductance, leaf area, leaf height); (b) whether commonly measured leaf functional traits (dry matter content, mass per area, nitrogen fraction, δ13C, height above ground) predict energy balance traits; and (c) how traits and environmental variables predict δ and β among species. We address these questions with diurnal measurements of 41 species co-occurring along a 1,100 m elevation gradient spanning desert to alpine biomes. We show that (a) energy balance traits are only weakly associated with environmental gradients and (b) are not well predicted by common functional traits. We also show that (c) δ and β can be partially approximated using interactions among site environment and traits, with a much larger role for environment than traits. The heterogeneity in leaf temperature metrics and energy balance traits challenges larger-scale predictive models of plant performance under environmental change. A free Plain Language Summary can be found within the Supporting Information of this article.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.13643},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7HIZ94QZ\\Blonder et al. - 2020 - Low predictability of energy balance traits and le.pdf;C\:\\Users\\Me\\Zotero\\storage\\4T6PB8PD\\1365-2435.html},
+  keywords = {elevation gradient,energy balance,leaf functional trait,leaf temperature,subalpine,thermal ecology},
+  langid = {english},
+  number = {9}
 }
 
 @article{bolstad_foliar_1999,
@@ -688,6 +724,24 @@
   number = {4}
 }
 
+@article{chinLeafAcclimationLight2017,
+  title = {Leaf Acclimation to Light Availability Supports Rapid Growth in Tall {{Picea}} Sitchensis Trees},
+  author = {Chin, Alana R. O. and Sillett, Stephen C.},
+  date = {2017-10-01},
+  journaltitle = {Tree Physiol},
+  volume = {37},
+  pages = {1352--1366},
+  publisher = {{Oxford Academic}},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/tpx027},
+  url = {http://academic.oup.com/treephys/article/37/10/1352/3076240},
+  urldate = {2021-03-09},
+  abstract = {Abstract. Leaf-level anatomical variation is readily apparent within tall tree crowns, yet the relative importance of water and light availability in controllin},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EE4A789V\\Chin and Sillett - 2017 - Leaf acclimation to light availability supports ra.pdf},
+  langid = {english},
+  number = {10}
+}
+
 @article{chinWithincrownPlasticityLeaf2019,
   title = {Within-Crown Plasticity in Leaf Traits among the Tallest Conifers},
   author = {Chin, Alana R. O. and Sillett, Stephen C.},
@@ -702,44 +756,6 @@
   abstract = {Premise of the study Leaves are the sites of greatest water stress in trees and a key means of acclimation to the environment. We considered phenotypic plasticity of Pseudotsuga menziesii leaves in their ecological context, exploring responsiveness to natural gradients in water stress (indicated by sample height) and light availability (measured from hemispherical photos) to understand how leaf structure is controlled by abiotic factors in tall tree crowns. Methods After measuring anatomy, morphology, and carbon isotope composition (δ13C) of leaves throughout crowns of P. menziesii {$>$}90 m tall, we compared structural plasticity of leaves among the three tallest conifer species using equivalent data from past work on Sequoia sempervirens and Picea sitchensis. Key results Leaf mass per projected area (LMA) and δ13C increased and mesoporosity (airspace/area) decreased along the water-stress gradient, while light did not play a detectable role in leaf development. Overall, leaves of P. menziesii were far less phenotypically responsive to within-crown abiotic gradients than either P. sitchensis, whose leaves responded strongly to light availability, or S. sempervirens, whose leaves responded equally strongly to water stress. Conclusions P. menziesii maintain remarkably consistent leaf structure despite pronounced vertical gradients in abiotic factors. Contrasting patterns of leaf structural plasticity underlie divergent ecological strategies of the three tallest conifer species, which coexist in Californian rainforests.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajb2.1230},
   file = {C\:\\Users\\Me\\Zotero\\storage\\QT38IXYE\\Chin and Sillett - 2019 - Within-crown plasticity in leaf traits among the t.pdf;C\:\\Users\\Me\\Zotero\\storage\\27HZSRMA\\ajb2.html},
-  keywords = {Cupressaceae,functional traits,hydraulic conductivity,leaf anatomy,phenotypic plasticity,Picea sitchensis,Pinaceae,Pseudotsuga menziesii,Sequoia sempervirens,tree height},
-  langid = {english},
-  number = {2}
-}
-
-@article{chinWithincrownPlasticityLeaf2019a,
-  title = {Within-Crown Plasticity in Leaf Traits among the Tallest Conifers},
-  author = {Chin, Alana R. O. and Sillett, Stephen C.},
-  date = {2019},
-  journaltitle = {American Journal of Botany},
-  volume = {106},
-  pages = {174--186},
-  issn = {1537-2197},
-  doi = {10.1002/ajb2.1230},
-  url = {http://bsapubs.onlinelibrary.wiley.com/doi/abs/10.1002/ajb2.1230},
-  urldate = {2021-03-09},
-  abstract = {Premise of the study Leaves are the sites of greatest water stress in trees and a key means of acclimation to the environment. We considered phenotypic plasticity of Pseudotsuga menziesii leaves in their ecological context, exploring responsiveness to natural gradients in water stress (indicated by sample height) and light availability (measured from hemispherical photos) to understand how leaf structure is controlled by abiotic factors in tall tree crowns. Methods After measuring anatomy, morphology, and carbon isotope composition (δ13C) of leaves throughout crowns of P. menziesii {$>$}90 m tall, we compared structural plasticity of leaves among the three tallest conifer species using equivalent data from past work on Sequoia sempervirens and Picea sitchensis. Key results Leaf mass per projected area (LMA) and δ13C increased and mesoporosity (airspace/area) decreased along the water-stress gradient, while light did not play a detectable role in leaf development. Overall, leaves of P. menziesii were far less phenotypically responsive to within-crown abiotic gradients than either P. sitchensis, whose leaves responded strongly to light availability, or S. sempervirens, whose leaves responded equally strongly to water stress. Conclusions P. menziesii maintain remarkably consistent leaf structure despite pronounced vertical gradients in abiotic factors. Contrasting patterns of leaf structural plasticity underlie divergent ecological strategies of the three tallest conifer species, which coexist in Californian rainforests.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajb2.1230},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\XMJ5BKRW\\Chin and Sillett - 2019 - Within-crown plasticity in leaf traits among the t.pdf},
-  keywords = {Cupressaceae,functional traits,hydraulic conductivity,leaf anatomy,phenotypic plasticity,Picea sitchensis,Pinaceae,Pseudotsuga menziesii,Sequoia sempervirens,tree height},
-  langid = {english},
-  number = {2}
-}
-
-@article{chinWithincrownPlasticityLeaf2019b,
-  title = {Within-Crown Plasticity in Leaf Traits among the Tallest Conifers},
-  author = {Chin, Alana R. O. and Sillett, Stephen C.},
-  date = {2019},
-  journaltitle = {American Journal of Botany},
-  volume = {106},
-  pages = {174--186},
-  issn = {1537-2197},
-  doi = {10.1002/ajb2.1230},
-  url = {http://bsapubs.onlinelibrary.wiley.com/doi/abs/10.1002/ajb2.1230},
-  urldate = {2021-03-09},
-  abstract = {Premise of the study Leaves are the sites of greatest water stress in trees and a key means of acclimation to the environment. We considered phenotypic plasticity of Pseudotsuga menziesii leaves in their ecological context, exploring responsiveness to natural gradients in water stress (indicated by sample height) and light availability (measured from hemispherical photos) to understand how leaf structure is controlled by abiotic factors in tall tree crowns. Methods After measuring anatomy, morphology, and carbon isotope composition (δ13C) of leaves throughout crowns of P. menziesii {$>$}90 m tall, we compared structural plasticity of leaves among the three tallest conifer species using equivalent data from past work on Sequoia sempervirens and Picea sitchensis. Key results Leaf mass per projected area (LMA) and δ13C increased and mesoporosity (airspace/area) decreased along the water-stress gradient, while light did not play a detectable role in leaf development. Overall, leaves of P. menziesii were far less phenotypically responsive to within-crown abiotic gradients than either P. sitchensis, whose leaves responded strongly to light availability, or S. sempervirens, whose leaves responded equally strongly to water stress. Conclusions P. menziesii maintain remarkably consistent leaf structure despite pronounced vertical gradients in abiotic factors. Contrasting patterns of leaf structural plasticity underlie divergent ecological strategies of the three tallest conifer species, which coexist in Californian rainforests.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajb2.1230},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\BEEL3N79\\Chin and Sillett - 2019 - Within-crown plasticity in leaf traits among the t.pdf;C\:\\Users\\Me\\Zotero\\storage\\M3XBUWI2\\ajb2.html},
   keywords = {Cupressaceae,functional traits,hydraulic conductivity,leaf anatomy,phenotypic plasticity,Picea sitchensis,Pinaceae,Pseudotsuga menziesii,Sequoia sempervirens,tree height},
   langid = {english},
   number = {2}
@@ -1277,6 +1293,20 @@
   langid = {english}
 }
 
+@online{EffectTreeHeight,
+  title = {The Effect of Tree Height and Light Availability on Photosynthetic Leaf Traits of Four Neotropical Species Differing in Shade Tolerance - {{Rijkers}} - 2000 - {{Functional Ecology}} - {{Wiley Online Library}}},
+  url = {https://besjournals-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1046/j.1365-2435.2000.00395.x},
+  urldate = {2021-03-09},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\CT7DYHUE\\j.1365-2435.2000.00395.html}
+}
+
+@online{EffectTreeHeighta,
+  title = {The Effect of Tree Height and Light Availability on Photosynthetic Leaf Traits of Four Neotropical Species Differing in Shade Tolerance},
+  url = {https://besjournals-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/epdf/10.1046/j.1365-2435.2000.00395.x},
+  urldate = {2021-03-09},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SA3VAPCR\\j.1365-2435.2000.00395.html}
+}
+
 @article{englandChangesLeafMorphology2005,
   title = {Changes in Leaf Morphology and Anatomy with Tree Age and Height in the Broadleaved Evergreen Species, {{Eucalyptus}} Regnans {{F}}. {{Muell}}},
   author = {England, Jacqueline R. and Attiwill, Peter M.},
@@ -1555,6 +1585,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\56C93FZE\\Gebauer et al. - 2015 - Effects of prolonged drought on the anatomy of sun.pdf},
   number = {21},
   pmcid = {PMC4662330}
+}
+
+@article{gebauerWithincanopyVariationNeedle2015,
+  title = {Within-Canopy Variation in Needle Morphology and Anatomy of Vascular Tissues in a Sparse {{Scots}} Pine Forest},
+  author = {Gebauer, Roman and Čermák, Jan and Plichta, Roman and Špinlerová, Zuzana and Urban, Josef and Volařík, Daniel and Ceulemans, Reinhart},
+  date = {2015-10-01},
+  journaltitle = {Trees},
+  volume = {29},
+  pages = {1447--1457},
+  issn = {1432-2285},
+  doi = {10.1007/s00468-015-1224-1},
+  url = {https://doi.org/10.1007/s00468-015-1224-1},
+  urldate = {2021-03-09},
+  abstract = {Azimuthal sides of the canopy affected neither needle morphology nor vascular anatomy. However, a significance was found to be associated with canopy height. The needle morphological and anatomical parameters of vascular tissues were scaled up to the forest stand level.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BBQBNAKB\\Gebauer et al. - 2015 - Within-canopy variation in needle morphology and a.pdf},
+  langid = {english},
+  number = {5}
 }
 
 @book{geigerClimateGround2009,
@@ -2789,6 +2836,40 @@
   langid = {english}
 }
 
+@article{marencoLeafTraitPlasticity2017,
+  title = {Leaf Trait Plasticity in Six Forest Tree Species of Central {{Amazonia}}},
+  author = {Marenco, R. A. and Camargo, M. A. B. and Antezana-Vera, S. A. and Oliveira, M. F.},
+  date = {2017-12-01},
+  journaltitle = {Photosynthetica},
+  volume = {55},
+  pages = {679--688},
+  issn = {1573-9058},
+  doi = {10.1007/s11099-017-0703-6},
+  url = {https://doi.org/10.1007/s11099-017-0703-6},
+  urldate = {2021-03-09},
+  abstract = {Tropical rainforest trees adjust leaf traits during ontogeny to cope with changes in the physical environment and maximize their carbon uptake. The aim of this study was to determine the plasticity index (PI) of leaf traits in understory and canopy leaves of six Amazonian tree species. In four of the six species the PI of leaf traits varied within species, and in four of the ten leaf traits assessed, the PI differed between species. The greatest PI values were found for stomatal density (Ds) and CO2-saturated photosynthesis, and the lowest ones were found for stomatal size, and leaf thickness. Despite the differences in PI values within species, the mean PI was similar in all the six species. As the saplings grow toward the canopy, the strategy to increase carbon uptake involves increasing Ds and leaf nitrogen and reducing stomatal size.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\CGEGPBWD\\Marenco et al. - 2017 - Leaf trait plasticity in six forest tree species o.pdf},
+  langid = {english},
+  number = {4}
+}
+
+@article{marencoLeafTraitPlasticity2017a,
+  title = {Leaf Trait Plasticity in Six Forest Tree Species of Central {{Amazonia}}},
+  author = {Marenco, R. A. and Camargo, M. A. B. and Antezana-Vera, S. A. and Oliveira, M. F.},
+  date = {2017-12-01},
+  journaltitle = {Photosynt.},
+  volume = {55},
+  pages = {679--688},
+  issn = {03003604, 15739058},
+  doi = {10.1007/s11099-017-0703-6},
+  url = {http://ps.ueb.cas.cz/doi/10.1007/s11099-017-0703-6.html},
+  urldate = {2021-03-09},
+  abstract = {Tropical rainforest trees adjust leaf traits during ontogeny to cope with changes in the physical environment and maximize their carbon uptake. The aim of this study was to determine the plasticity index (PI) of leaf traits in understory and canopy leaves of six Amazonian tree species. In four of the six species the PI of leaf traits varied within species, and in four of the ten leaf traits assessed, the PI differed between species. The greatest PI values were found for stomatal density (Ds) and CO2-saturated photosynthesis, and the lowest ones were found for stomatal size, and leaf thickness. Despite the differences in PI values within species, the mean PI was similar in all the six species. As the saplings grow toward the canopy, the strategy to increase carbon uptake involves increasing Ds and leaf nitrogen and reducing stomatal size.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PRZJHM9K\\Marenco et al. - 2017 - Leaf trait plasticity in six forest tree species o.pdf},
+  langid = {english},
+  number = {4}
+}
+
 @article{marquesEFFECTSSUNSHADE1999,
   title = {{{EFFECTS OF SUN AND SHADE ON LEAF STRUCTURE AND SCLEROPHYLLY OF SEBASTIANIA MYRTILLOIDES}} ({{EUPHORBIACEAE}}) {{FROM SERRA DO CIPÓ}}, {{MINAS GERAIS}}, {{BRAZIL}}},
   author = {MARQUES, ANDRÉA RODRIGUES and GARCIA, QUEILA S. and FERNANDES, G. WILSON},
@@ -3756,6 +3837,25 @@
   number = {2}
 }
 
+@article{oldhamHydrostaticGradientNot2010,
+  title = {The Hydrostatic Gradient, Not Light Availability, Drives Height-Related Variation in {{Sequoia}} Sempervirens ({{Cupressaceae}}) Leaf Anatomy},
+  author = {Oldham, Alana R. and Sillett, Stephen C. and Tomescu, Alexandru M. F. and Koch, George W.},
+  date = {2010},
+  journaltitle = {American Journal of Botany},
+  volume = {97},
+  pages = {1087--1097},
+  issn = {1537-2197},
+  doi = {10.3732/ajb.0900214},
+  url = {http://bsapubs.onlinelibrary.wiley.com/doi/abs/10.3732/ajb.0900214},
+  urldate = {2021-03-09},
+  abstract = {• Premise of the study: Leaves at the tops of most trees are smaller, thicker, and in many other ways different from leaves on the lowermost branches. This height-related variation in leaf structure has been explained as acclimation to differing light environments and, alternatively, as a consequence of hydrostatic, gravitational constraints on turgor pressure that reduce leaf expansion. • Methods: To separate hydrostatic effects from those of light availability, we used anatomical analysis of height-paired samples from the inner and outer tree crowns of tall redwoods (Sequoia sempervirens). • Key results: Height above the ground correlates much more strongly with leaf anatomy than does light availability. Leaf length, width, and mesophyll porosity all decrease linearly with height and help explain increases in leaf-mass-to-area ratio and decreases in both photosynthetic capacity and internal gas-phase conductance with increasing height. Two functional traits—leaf thickness and transfusion tissue—also increase with height and may improve water-stress tolerance. Transfusion tissue area increases enough that whole-leaf vascular volume does not change significantly with height in most trees. Transfusion tracheids become deformed with height, suggesting they may collapse under water stress and act as a hydraulic buffer that improves leaf water status and reduces the likelihood of xylem dysfunction. • Conclusions: That such variation in leaf structure may be caused more by gravity than by light calls into question use of the terms “sun” and “shade” to describe leaves at the tops and bottoms of tall tree crowns.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.3732/ajb.0900214},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\25MGUXXP\\Oldham et al. - 2010 - The hydrostatic gradient, not light availability, .pdf},
+  keywords = {Cupressaceae,hydrostatic gradient,leaf expansion,mesophyll porosity,Sequoia sempervirens,sun leaves,tracheid collapse,transfusion tissue,water stress},
+  langid = {english},
+  number = {7}
+}
+
 @online{OntogenicChangesRather,
   title = {Ontogenic Changes Rather than Difference in Temperature Cause Understory Trees to Leaf out Earlier on {{JSTOR}}},
   eprint = {newphytologist.198.1.149},
@@ -4504,6 +4604,25 @@
   abstract = {1. Light-saturated rate of photosynthesis (Amax), nitrogen (N), chlorophyll (Chl) content and leaf mass per unit area (LMA) were measured in leaves of trees of different heights along a natural light gradient in a French Guiana rain forest. The following four species, arranged in order from most shade-tolerant to pioneer, were studied: Duguetia surinamensis, Vouacapoua americana, Dicorynia guianensis and Goupia glabra. Light availability of trees was estimated using hemispherical photography. 2. The pioneer species Goupia had the lowest LMA and leaf N on both an area and mass basis, whereas Duguetia had the highest values. In general, leaf variables of Vouacapoua and Dicorynia tended to be intermediates. Because Amax/area was similar among species, Goupia showed both a much higher light-saturated photosynthetic nitrogen-use efficiency (PNUEmax) and Amax/mass. Leaves of Vouacapoua demonstrated the greatest plasticity in Amax/area, particularly in small saplings. 3. A distinction could be made between the effect of tree height and light availability on the structural, i.e. LMA, and photosynthetic leaf characteristics of all four species. The direction and magnitude of the variation in variables were similar among species. 4. LMA was the key variable that mainly determined variation in the other leaf variables along tree height and light availability gradients, with the exception of changes in chlorophyll concentration. Amax/area, N/area, LMA and stomatal conductance to water vapour (gs) increased, whereas Chl/mass decreased, with both increasing tree height and canopy openness. Amax/mass, PNUEmax and Amax/Chl increased with increasing openness only. N/mass and Chl/area were independent of tree height and openness, except for small saplings of Goupia which had a much lower Chl/area.},
   annotation = {\_eprint: https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2435.2000.00395.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\QEHMBRIV\\Rijkers et al. - 2000 - The effect of tree height and light availability o.pdf;C\:\\Users\\Me\\Zotero\\storage\\5UE57SRW\\j.1365-2435.2000.00395.html},
+  keywords = {Canopy openness,French Guiana,leaf morphology,photosynthesis,rain forest,tree size},
+  langid = {english},
+  number = {1}
+}
+
+@article{rijkersEffectTreeHeight2000b,
+  title = {The Effect of Tree Height and Light Availability on Photosynthetic Leaf Traits of Four Neotropical Species Differing in Shade Tolerance},
+  author = {Rijkers, T. and Pons, T. L. and Bongers, F.},
+  date = {2000},
+  journaltitle = {Functional Ecology},
+  volume = {14},
+  pages = {77--86},
+  issn = {1365-2435},
+  doi = {10.1046/j.1365-2435.2000.00395.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-2435.2000.00395.x},
+  urldate = {2021-03-09},
+  abstract = {1. Light-saturated rate of photosynthesis (Amax), nitrogen (N), chlorophyll (Chl) content and leaf mass per unit area (LMA) were measured in leaves of trees of different heights along a natural light gradient in a French Guiana rain forest. The following four species, arranged in order from most shade-tolerant to pioneer, were studied: Duguetia surinamensis, Vouacapoua americana, Dicorynia guianensis and Goupia glabra. Light availability of trees was estimated using hemispherical photography. 2. The pioneer species Goupia had the lowest LMA and leaf N on both an area and mass basis, whereas Duguetia had the highest values. In general, leaf variables of Vouacapoua and Dicorynia tended to be intermediates. Because Amax/area was similar among species, Goupia showed both a much higher light-saturated photosynthetic nitrogen-use efficiency (PNUEmax) and Amax/mass. Leaves of Vouacapoua demonstrated the greatest plasticity in Amax/area, particularly in small saplings. 3. A distinction could be made between the effect of tree height and light availability on the structural, i.e. LMA, and photosynthetic leaf characteristics of all four species. The direction and magnitude of the variation in variables were similar among species. 4. LMA was the key variable that mainly determined variation in the other leaf variables along tree height and light availability gradients, with the exception of changes in chlorophyll concentration. Amax/area, N/area, LMA and stomatal conductance to water vapour (gs) increased, whereas Chl/mass decreased, with both increasing tree height and canopy openness. Amax/mass, PNUEmax and Amax/Chl increased with increasing openness only. N/mass and Chl/area were independent of tree height and openness, except for small saplings of Goupia which had a much lower Chl/area.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2435.2000.00395.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\N9CF6JG7\\Rijkers et al. - 2000 - The effect of tree height and light availability o.pdf;C\:\\Users\\Me\\Zotero\\storage\\EFFTXZ3S\\j.1365-2435.2000.00395.html},
   keywords = {Canopy openness,French Guiana,leaf morphology,photosynthesis,rain forest,tree size},
   langid = {english},
   number = {1}
@@ -5542,6 +5661,26 @@
   number = {2}
 }
 
+@article{umanaDoesTraitVariation2019,
+  title = {Does Trait Variation within Broadly Distributed Species Mirror Patterns across Species? {{A}} Case Study in {{Puerto Rico}}},
+  shorttitle = {Does Trait Variation within Broadly Distributed Species Mirror Patterns across Species?},
+  author = {Umaña, María N. and Swenson, Nathan G.},
+  date = {2019},
+  journaltitle = {Ecology},
+  volume = {100},
+  pages = {e02745},
+  issn = {1939-9170},
+  doi = {10.1002/ecy.2745},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecy.2745},
+  urldate = {2021-03-09},
+  abstract = {Although populations are phenotypically diverse, the majority of trait-based studies have focused on examining differences among species. The justification for this broadly applied approach is based on the assumption that differences among species are always greater than within species. This is likely true for local communities, but species are often broadly distributed across a wide range of environments and patterns of intraspecific variation might surpass differences among species. Therefore, an appropriate interpretation of the functional diversity requires an assessment of patterns of trait variation across different ecological scales. In this study, we examine and characterize patterns of leaf trait variation for species that are broadly distributed along an elevational gradient. We focus on seven leaf traits that represent a main axis of functional differentiation in plants reflecting the balance between photosynthetic efficiency, display, and stomatal conductance. We evaluated patterns of trait variance across ecological scales (elevation, species, populations, and individuals) and examined trait covariance at both within species and across species levels, along the elevation gradient. Our results show three key patterns: (1) intraspecific leaf trait variation for broadly distributed species is comparable to the interspecific trait variation, (2) the trait variance structure is highly variable across species, and (3) trait coordination between pairs of leaf traits is evident across species along the gradient, but not always within species. Combined, our results show that trait coordination and covariance are highly idiosyncratic across broadly distributed and co-occurring species, indicating that species may achieve similar functional roles even when exhibiting different phenotypes. This result challenges the traditional paradigm of functional ecology that assumes single trait values as optimal solutions for environments. In conclusion, patterns of trait variation both across and within species should be considered in future studies that assess trade-offs among traits over environmental gradients.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ecy.2745},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RK2XNU9T\\Umaña and Swenson - 2019 - Does trait variation within broadly distributed sp.pdf;C\:\\Users\\Me\\Zotero\\storage\\YRNK9PCR\\ecy.html},
+  keywords = {intraspecific trait variation,leaf area,leaf carbon content,leaf thickness,plant functional traits,specific leaf area,trait covariance,variance components},
+  langid = {english},
+  number = {8}
+}
+
 @article{urbanInductionPhotosynthesisImportance2007,
   title = {Induction of Photosynthesis and Importance of Limitations during the Induction Phase in Sun and Shade Leaves of Five Ecologically Contrasting Tree Species from the Temperate Zone},
   author = {Urban, Otmar and Kosvancová, Martina and Marek, Michal V. and Lichtenthaler, Hartmut K.},
@@ -6059,6 +6198,24 @@
   number = {5}
 }
 
+@article{wrightGradientsLightAvailability2006b,
+  title = {Gradients of Light Availability and Leaf Traits with Leaf Age and Canopy Position in 28 {{Australian}} Shrubs and Trees},
+  author = {Wright, Ian J. and Leishman, Michelle R. and Read, Cassia and Westoby, Mark},
+  date = {2006-05-23},
+  journaltitle = {Functional Plant Biol.},
+  volume = {33},
+  pages = {407--419},
+  publisher = {{CSIRO PUBLISHING}},
+  issn = {1445-4416},
+  doi = {10.1071/FP05319},
+  url = {http://www.publish.csiro.au/fp/FP05319},
+  urldate = {2021-03-09},
+  abstract = {Light availability generally decreases vertically downwards through plant canopies. According to optimisation theory, in order to maximise canopy photosynthesis plants should allocate leaf nitrogen per area (Narea) in parallel with vertical light gradients, and leaf mass per area (LMA) and leaf angles should decrease down through the canopy also. Many species show trends consistent with these predictions, although these are never as steep as predicted. Most studies of canopy gradients in leaf traits have concerned tall herbaceous vegetation or forest trees. But do evergreen species from open habitats also show these patterns? We quantified gradients of light availability, LMA, leaf N and phosphorus (P), and leaf angle along leaf age sequences and vertical canopy profiles, across 28 woody species from open habitats in eastern Australia. The observed trends in LMA, Narea and leaf angle largely conflicted with expectations from canopy optimisation models, whereas trends in leaf P were more consistent with optimal allocation. These discrepancies most likely relate to these species having rather open canopies with quite shallow light gradients, but also suggest that modelling the co-optimisation of resources other than nitrogen is required for understanding plant canopies.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NBJ85SS6\\Wright et al. - 2006 - Gradients of light availability and leaf traits wi.pdf;C\:\\Users\\Me\\Zotero\\storage\\U9YGC8JC\\FP05319.html},
+  langid = {english},
+  number = {5}
+}
+
 @article{wykaResponsesLeafStructure2012,
   title = {Responses of Leaf Structure and Photosynthetic Properties to Intra-Canopy Light Gradients: A Common Garden Test with Four Broadleaf Deciduous Angiosperm and Seven Evergreen Conifer Tree Species},
   shorttitle = {Responses of Leaf Structure and Photosynthetic Properties to Intra-Canopy Light Gradients},
@@ -6276,6 +6433,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\IIXEWQUU\\LeafAge, Zhang et al. 2012.pdf},
   langid = {english},
   number = {5}
+}
+
+@article{zhangProductiveLeafFunctional2012,
+  title = {Productive Leaf Functional Traits of {{Chinese}} Savanna Species},
+  author = {Zhang, Jiao-Lin and Poorter, L. and Cao, Kun-Fang},
+  date = {2012-09-01},
+  journaltitle = {Plant Ecol},
+  volume = {213},
+  pages = {1449--1460},
+  issn = {1573-5052},
+  doi = {10.1007/s11258-012-0103-8},
+  url = {https://doi.org/10.1007/s11258-012-0103-8},
+  urldate = {2021-03-09},
+  abstract = {The river valleys in Southwest China are characterized by a dry–hot climate and relatively rich soils, and host valley-type savannas that are dominated by deciduous species. However, little is known about the ecological adaptations of Chinese savanna plants to the local environments. We hypothesize that Chinese savanna species mainly possess a drought-avoiding strategy by having a deciduous leaf habit and have productive leaf traits. To test this hypothesis, we measured 26 anatomical, morphological, physiological, and chemical traits for 33 woody species from a valley savanna in Southwest China and compared them with the literature data of other dry and wet tropical tree species and a global dataset. We found that Chinese savanna species showed drought avoidance adaptations and exhibited productive leaf traits, such as thin and dense leaves with high ratio of palisade to spongy mesophyll, leaf nutrient concentrations and photosynthetic capacity. Correlations of photosynthetic capacity with N, P, and stomatal conductance across Chinese savanna species were consistent with global patterns reported for seed plants. However, the Chinese savanna species had consistently greater carbon gain at a given specific leaf area, N, P, and stomatal conductance, suggesting higher nutrient- and intrinsic water use efficiencies. These results suggest that paradoxically, Chinese savanna species are adapted to the stressful dry–hot valley habitat by having productive leaves.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\VQ8Q6U95\\Zhang et al. - 2012 - Productive leaf functional traits of Chinese savan.pdf},
+  langid = {english},
+  number = {9}
 }
 
 @article{zohnerOngoingSeasonallyUneven2019,
