--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4628,6 +4628,25 @@
   number = {1}
 }
 
+@article{rijkersEffectTreeHeight2000c,
+  title = {The Effect of Tree Height and Light Availability on Photosynthetic Leaf Traits of Four Neotropical Species Differing in Shade Tolerance},
+  author = {Rijkers, T. and Pons, T. L. and Bongers, F.},
+  date = {2000},
+  journaltitle = {Functional Ecology},
+  volume = {14},
+  pages = {77--86},
+  issn = {1365-2435},
+  doi = {10.1046/j.1365-2435.2000.00395.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-2435.2000.00395.x},
+  urldate = {2021-03-15},
+  abstract = {1. Light-saturated rate of photosynthesis (Amax), nitrogen (N), chlorophyll (Chl) content and leaf mass per unit area (LMA) were measured in leaves of trees of different heights along a natural light gradient in a French Guiana rain forest. The following four species, arranged in order from most shade-tolerant to pioneer, were studied: Duguetia surinamensis, Vouacapoua americana, Dicorynia guianensis and Goupia glabra. Light availability of trees was estimated using hemispherical photography. 2. The pioneer species Goupia had the lowest LMA and leaf N on both an area and mass basis, whereas Duguetia had the highest values. In general, leaf variables of Vouacapoua and Dicorynia tended to be intermediates. Because Amax/area was similar among species, Goupia showed both a much higher light-saturated photosynthetic nitrogen-use efficiency (PNUEmax) and Amax/mass. Leaves of Vouacapoua demonstrated the greatest plasticity in Amax/area, particularly in small saplings. 3. A distinction could be made between the effect of tree height and light availability on the structural, i.e. LMA, and photosynthetic leaf characteristics of all four species. The direction and magnitude of the variation in variables were similar among species. 4. LMA was the key variable that mainly determined variation in the other leaf variables along tree height and light availability gradients, with the exception of changes in chlorophyll concentration. Amax/area, N/area, LMA and stomatal conductance to water vapour (gs) increased, whereas Chl/mass decreased, with both increasing tree height and canopy openness. Amax/mass, PNUEmax and Amax/Chl increased with increasing openness only. N/mass and Chl/area were independent of tree height and openness, except for small saplings of Goupia which had a much lower Chl/area.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2435.2000.00395.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LS4U6QU7\\Rijkers et al. - 2000 - The effect of tree height and light availability o.pdf;C\:\\Users\\Me\\Zotero\\storage\\VFV8QBRF\\j.1365-2435.2000.00395.html},
+  keywords = {Canopy openness,French Guiana,leaf morphology,photosynthesis,rain forest,tree size},
+  langid = {english},
+  number = {1}
+}
+
 @article{robertsStomatalBoundaryLayerConductances1990a,
   title = {Stomatal and {{Boundary}}-{{Layer Conductances}} in an {{Amazonian}} Terra {{Firme Rain Forest}}},
   author = {Roberts, John and Cabral, Osvaldo M. R. and Aguiar, Leandro Ferreira De},
